--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d2.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d2.htm
@@ -4,23 +4,19 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Filtering resources from a release by adding a CVS ignore file</title>
+<title>Authoring the CVS .ignore File</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Filtering resources from a release by adding a CVS ignore file</H1>
-<P CLASS="Para" Label=Type>When synchronizing resources, often there are resources that you do not want to release to the stream.
-You can use the CVS &quot;ignore&quot; facility, which reads the contents of
-the file .cvsignore to determine what to ignore. (This facility is used most often to
-ignore directories. By contrast, the global facility that is also provided with
-the workbench causes all files whose names match specified patterns to be
-ignored at release time, regardless of the directory that they are in.) Any file or subdirectory <i> in the current directory</i> that matches any one of the patterns
-will be ignored.</P>
-<P> The&nbsp; <i>.</i>cvsignore file can be added to any directory
-of a project. Many existing CVS projects
-already contain several of these files.
-This text file consists of a list of files, directories, or patterns. </P>
+<H1 CLASS="Head">Authoring the CVS .ignore File</H1>
+<P CLASS="Para" Label=Type>When committing resources, often there are resources 
+  that you do not want to at the version control. You can use the CVS &quot;ignore&quot; 
+  facility, which reads the contents of the file <i>.cvsignore</i> to determine 
+  what to ignore. This facility is used most often to ignore directories. </P>
+<P CLASS="Para" Label=Type>The&nbsp; <i>.</i>cvsignore file can be added to any 
+  directory of a project. Many existing CVS projects already contain several of 
+  these files. This text file consists of a list of files, directories, or patterns. 
+</P>
 <P> For example, to add a .cvsignore file to ignore the entire bin directory of
 an existing project: </P>
 <ol>
@@ -34,10 +30,9 @@ directory. You should see it in the Navigator view.</li>
   <li>
 Enter <samp>bin</samp>  in the .cvsignore file and save
 it.</li>
-  <li>
-Select the project.&nbsp; From the context menu, select the <b> Team &gt;
-Synchronize with Stream</b> menu item.&nbsp; Notice that the bin
-directory does not show as an outgoing change. It is ignored.</li>
+  <li> Select the project.&nbsp; From the context menu, select the <b> Team &gt; 
+    Synchronize with Repository</b> menu item.&nbsp; Notice that the bin directory 
+    does not show as an outgoing change. It is ignored.</li>
 </ol>
 <P>The cvsignore file consists of a list of files, directories, or patterns.&nbsp; In a similar way
 to the global ignore facility, the wildcards * and ? may be present in any entry in the
@@ -52,22 +47,21 @@ will be ignored.
 
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27c.htm"><br>
-</a><a href="../concepts/concepts-27b.htm">
-Streams</a><a href="../reference/ref-51a.htm"><br>
-</a><a href="../concepts/concepts-30.htm">
-Team synchronization</a>&nbsp;</p>
+<a href="../concepts/concepts-26.htm">Team programming</a><br>
+<a href="../concepts/concepts-27c.htm">Repositories</a><br>
+<a href="../concepts/concepts-27b.htm">Branches</a><br>
+<a href="../concepts/concepts-30.htm">Team synchronization</a>
+</p>
 
 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-115.htm"><br>
-Synchronizing with a stream</a><a href="tasks-114.htm"><br>
-Releasing resources to the stream</a><a href="tasks-100d.htm"><br>
-Filtering resources from a release</a><a href="tasks-100d1.htm"><br>
-Creating a global pattern to
-                filter resources from releasing</a> &nbsp;<a href="tasks-100d3.htm"><br>
-Stopping resources from
-                releasing at synchronization time</a> &nbsp;<a href="tasks-100d1b.htm"><br>
-Overriding patterns that prevent resources from releasing</a></p>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-115.htm">Synchronizing with a stream</a><br>
+<a href="tasks-114.htm">Releasing resources to the stream</a><br>
+<a href="tasks-100d.htm">Filtering resources from a release</a><br>
+<a href="tasks-100d1.htm">Creating a global pattern to filter resources from releasing</a><br>
+<a href="tasks-100d3.htm">Stopping resources from releasing at synchronization time</a><br>
+<a href="tasks-100d1b.htm">Overriding patterns that prevent resources from releasing</a>
+</p>
 
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
