*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts.htm
@@ -50,7 +50,7 @@ Some additional concepts are introduced by layouts. </P>
     the widget adjacent to the edge.</li>
 </ul>
 <P >
-See <a href="http://www.eclipse.org/articles/Article-Understanding%20Layouts/Understanding%20Layouts.htm">Understanding
+See <a href="http://www.eclipse.org/articles/Understanding%20Layouts/Understanding%20Layouts.htm">Understanding
 Layouts in SWT</a>&nbsp; for further discussion and pictures demonstrating these concepts. </P>
 <P >
 The following code snippet shows the simple case of an application using a resize callback to size a label to the size of its parent shell.</P>
@@ -75,7 +75,7 @@ The next snippet uses a layout to achieve the same effect:</P>
 <P >
 Even for this simple example, using a layout reduces the application code. For more complex layouts, the simplification is much greater.</P>
 <P >
-SWT provides three default layout classes that can be used for many situations.</P>
+SWT provides four default layout classes that can be used for many situations.</P>
 
 
 <H3>
@@ -100,9 +100,12 @@ RowLayout</H3>
 <P >
 <a href="../reference/api/org/eclipse/swt/layout/RowLayout.html"><b>
 RowLayout</b></a> also lays out widgets in rows, but is more flexible than <b><a href="../reference/api/org/eclipse/swt/layout/FillLayout.html">
-FillLayout</a></b>. It can wrap the widgets, creating as many rows as needed to display them. It also provides configurable margins on each edge of the layout, and configurable spacing between widgets in the layout. You can pack a
+FillLayout</a></b>. The <b>type</b> field controls whether the widgets will be
+placed in horizontal rows or vertical columns.</P>
+<P >It can optionally <b>wrap</b> the widgets, creating as many rows or columns as needed to display them. It also provides configurable margins on each edge of the layout, and configurable spacing between widgets in the layout. You can
+<b> pack</b> a
 <a href="../reference/api/org/eclipse/swt/layout/RowLayout.html"><b>
-RowLayout</b></a>, which will force all widgets to be the same size. If you justify a
+RowLayout</b></a>, which will force all widgets to be the same size. If you <b> justify</b> a
 <a href="../reference/api/org/eclipse/swt/layout/RowLayout.html"><b>
 RowLayout</b></a>, extra space remaining in the <b><a href="../reference/api/org/eclipse/swt/widgets/Composite.html">Composite</a>
 </b>will be allocated as margins between the widgets.</P>
@@ -110,6 +113,92 @@ RowLayout</b></a>, extra space remaining in the <b><a href="../reference/api/org
 The height and width of each widget in a <a href="../reference/api/org/eclipse/swt/layout/RowLayout.html"><b>
 RowLayout</b></a> can be specified in a <a href="../reference/api/org/eclipse/swt/layout/RowData.html"><b> RowData</b></a> object which should be set in the widget using
 <b>setLayoutData</b>.</P>
+
+
+<H3>
+FormLayout</H3>
+<P ><a href="../reference/api/org/eclipse/swt/layout/FormLayout.html"><b>FormLayout</b></a>
+lays out widgets using an attachment model.&nbsp; A <a href="../reference/api/org/eclipse/swt/layout/FormAttachment.html"><b>FormAttachment
+</b></a>can be defined for each side of a widget and stored in its layout data (<a href="../reference/api/org/eclipse/swt/layout/FormData.html"><b>FormData</b></a>).&nbsp;
+The <a href="../reference/api/org/eclipse/swt/layout/FormData.html"><b>FormData</b></a><b>
+</b>can be used to designate a requested <b>width</b> and <b>height</b> for the
+widget, provided these values don't conflict with the attachment constraints.</P>
+<P >A <a href="../reference/api/org/eclipse/swt/layout/FormAttachment.html"><b>FormAttachment
+</b></a>is used to attach a designated side of the widget to the parent <b><a href="../reference/api/org/eclipse/swt/widgets/Composite.html">Composite</a>
+</b>or another widget in the layout.&nbsp; Typically, you do not set attachments
+on all sides of a widget.&nbsp; It is very common to specify only one horizontal
+(<b>left</b> or <b>right</b>) attachment and one vertical (<b>top</b> or <b>bottom</b>)
+attachment and allow the widgets to take the size specified in their <a href="../reference/api/org/eclipse/swt/layout/FormData.html"><b>FormData</b></a><b>,
+</b>or their preferred size, if no size is specified in the <a href="../reference/api/org/eclipse/swt/layout/FormData.html"><b>FormData</b></a>.</P>
+<P ><b>&nbsp;</b>Attachments can be configured in a variety of ways:</P>
+<TABLE BORDER="1" width="658">
+<TR>
+<TH ROWSPAN="1" COLSPAN="1" width="163">
+<P CLASS="CellHeading">
+Attachment Type</P>
+</TH>
+<TH ROWSPAN="1" COLSPAN="1" width="479">
+<P CLASS="CellHeading">
+Usage</P>
+</TH>
+</TR>
+<TR>
+<TD width="163">
+<P CLASS="CellBody">
+<b>position, offset</b></P>
+</TD>
+<TD width="479">
+<P CLASS="CellBody">
+Attach the specified side of a widget to a <b>position</b> (percentage value
+0-100) in the parent widget.&nbsp; An optional pixel <b>offset</b> can be added.</P>
+</TD>
+</TR>
+<TR>
+<TD width="163">
+<P CLASS="CellBody">
+<b>adjacent widget, offset</b></P>
+</TD>
+<TD width="479">
+<P CLASS="CellBody">
+Attach the specified side of a widget to the adjacent side of a target widget
+inside the composite.&nbsp; An optional pixel <b>offset</b> can be added.&nbsp;
+The side where the target widget is attached is inferred based on the side
+specified in the source widget.&nbsp; For example, attaching the <b>top</b> edge
+to a widget implies that it is being attached to the <b>bottom</b> edge of the
+target widget.</P>
+</TD>
+</TR>
+<TR>
+<TD width="163">
+<P CLASS="CellBody">
+<b>reference widget, offset</b></P>
+</TD>
+<TD width="479">
+<P CLASS="CellBody">
+Attach the specified side of a widget to a particular side of a target widget
+inside the composite.&nbsp; An optional pixel <b>offset</b> can be added.&nbsp;
+This can be used, for example, to align the top of a widget with the top of
+another widget so that they will always line up vertically.</P>
+</TD>
+</TR>
+<TR>
+<TD width="163">
+<b>reference widget, centered, offset</b>
+</TD>
+<TD width="479">
+Center the widget relative to a target widget.&nbsp; The center need only be
+specified for one side (<b>left</b> or <b>right</b>, <b>top</b> or <b>bottom</b>)
+in the direction being centered.
+</TD>
+</TR>
+</TABLE>
+
+
+<p>
+See&nbsp;<a href="http://www.eclipse.org/articles/Understanding%20Layouts/Understanding%20Layouts.htm">Understanding
+Layouts in SWT</a>
+for further descriptions and example screen captures using the various
+attachment styles.</p>
 
 
 <H3>
@@ -221,7 +310,7 @@ You can achieve some highly dynamic and complex layouts using the <a href="../re
 <a href="../reference/api/org/eclipse/swt/layout/GridData.html"><b> GridData</b></a>. The ability to allow widgets to span across cells produces many layouts that don't even look like a grid.</P>
 <P >
 The following table summarizes the configurable parameters for <a href="../reference/api/org/eclipse/swt/layout/GridData.html"><b> GridData</b></a>.&nbsp;&nbsp;
-See&nbsp;<a href="http://www.eclipse.org/articles/Article-Understanding%20Layouts/Understanding%20Layouts.htm">Understanding
+See&nbsp;<a href="http://www.eclipse.org/articles/Understanding%20Layouts/Understanding%20Layouts.htm">Understanding
 Layouts in SWT</a>
 for further description and example screen captures using the various grid
 parameters.</P>
@@ -370,7 +459,7 @@ Once you have the algorithm working, the code can be refactored into a subclass 
     <b> flushCache</b> parameter tells the <a href="../reference/api/org/eclipse/swt/widgets/Layout.html"><b> Layout</b></a>
     to flush cached data, which is necessary when other factors besides the size of the composite have changed (such as the creation of removal of children, or a change in the widget's font, etc.)</li>
 </ul>
-<p>Further discussion of custom layouts can be found in <a href="http://www.eclipse.org/articles/Article-Understanding%20Layouts/Understanding%20Layouts.htm">Understanding
+<p>Further discussion of custom layouts can be found in <a href="http://www.eclipse.org/articles/Understanding%20Layouts/Understanding%20Layouts.htm">Understanding
 Layouts in SWT</a>.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 
