--- a/bundles/org.eclipse.platform.doc.isv/guide/editors.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors.htm
@@ -16,14 +16,14 @@ Editors
 We have seen how plug-ins can contribute an editor to the workbench, but we
 haven't yet looked at the implementation of an editor.</P>
 <P >There is no &quot;typical&quot; implementation pattern for an editor, because editors usually provide application-specific semantics.&nbsp;
-For example, a tool that edits and manages a particular resource type will
+A tool that edits and manages a particular resource type will
 provide customized behavior for manipulating the data represented by the resource.</P>
 <P >Editors can come in all shapes and sizes.&nbsp; If a plug-in's editor is text-based, then the editor can either use the existing default text editor, or create a customized text editor
 by using the facilities provided in
 JFace.&nbsp; The latter approach is used by the Java development tooling (JDT)
 editors.&nbsp;&nbsp;</P>
     <p >
-<img border="0" src="images/javaeditor.jpg" width="342" height="367">
+<img border="0" src="images/javaeditor.jpg" width="429" height="376">
     <p >
 If a plug-in's editor is not text based, then a custom editor must be implemented by the plug-in. There are several approaches for building
 custom editors, all of which depend on the look and behavior of the editor.
