--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-115.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-115.htm
@@ -9,73 +9,67 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">Synchronizing with the repository</H1>
-<P CLASS="Intro">To synchronize resources in the workbench with resources in a 
-  branch: 
+<P CLASS="Intro">To synchronize resources in the workbench those in the repository: 
 <ol>
-  <li>
-    <p CLASS="Intro">In the Navigator view, select the resources that you want to
-synchronize with a branch.</li>
-  <li>
-    <p CLASS="Intro">Right-click and select <b>Team &gt; Synchronize with Repository</b>. 
-      The Synchronize view opens.
+  <li> 
+    <p CLASS="Intro">In the Navigator view, select the resources that you want 
+      to synchronize.
   </li>
-  <li>
-    <p CLASS="Intro">Use the toolbar buttons to switch modes for this view.
-    There are three:
+  <li> 
+    <p CLASS="Intro">Right-click and select <b>Team &gt; Synchronize with Repository</b>. 
+      The Synchronize view opens. 
+  </li>
+  <li> 
+    <p CLASS="Intro">Use the toolbar buttons to switch modes for this view. There 
+      are three: 
     <ul>
-      <li>
+      <li> 
         <p CLASS="Intro">Incoming mode - shows incoming changes only (resources 
-          in the branch that differ from what is in the workbench).
+          in the repository that differ from what is in the workbench). 
       </li>
-      <li>
+      <li> 
         <p CLASS="Intro">Outgoing mode - shows outgoing changes only (resources 
-          modified in the workbench).
+          modified in the workbench). 
       </li>
-      <li>
+      <li> 
         <p CLASS="Intro">Incoming/Outgoing mode - shows both incoming and outgoing 
-          changes.
+          changes. 
       </li>
     </ul>
     <p CLASS="Intro"><b>Important</b>: It is preferable to update resources in 
       the workbench first, resolve any conflicts that exist by merging, then commit 
-      workbench resources to the branch.
+      workbench resources to the repository. 
   </li>
-  <li>
-    <p CLASS="Intro">To show only conflicts (resources edited in both the workbench
-and in the branch), click the <b>
-Show Only Conflicts</b> button on the view's toolbar.</li>
+  <li> 
+    <p CLASS="Intro">It is possible that someone has committed a new revision 
+      of your file since you started working on it. This will result in a <b>conflict</b>, 
+      and care must be taken to resolve this. To see just conflicts, click the 
+      <b> Show Only Conflicts</b> button on the view's toolbar.
+  </li>
 </ol>
 <p CLASS="Intro">The resources displayed in the Structure Compare area will depend 
-  on which filters are used in the Synchronize view. In the Text Compare area, 
-  the workbench resource is on the left side, and the repository resource is on 
-  the right side.</p>
+  on which mode is used in the Synchronize view. In the Text Compare area, the 
+  workbench resource is on the left side, and the repository resource is on the 
+  right side.</p>
 
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27b.htm"><br>
-  Branches</a><a href="../reference/ref-51a.htm"><br>
-</a><a href="../concepts/concepts-30.htm">
-Team synchronization</a>&nbsp;<a href="../concepts/concepts-30b.htm"><br>
-Synchronize view<br>
-</a><a href="../concepts/concepts-29.htm">Three-way comparisons</a></p>
+<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
+<a href="../concepts/concepts-27b.htm">Branches</a><br>
+<a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a><br>
+<a href="../concepts/concepts-30b.htm">CVS Synchronize view</a><br>
+<a href="../concepts/concepts-29.htm">Three-way comparisons</a></p>
 
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-  </a><a href="tasks-96.htm"> Adding resources from a repository to the workbench</a>&nbsp;<a href="tasks-103.htm"><br>
-  Replacing resources with a repository revision</a><a href="tasks-111.htm"><br>
-  </a><a href="tasks-117.htm"> </a><a href="tasks-100a.htm">Splitting from a branch</a><a href="tasks-115.htm"><br>
-  </a><a href="tasks-113.htm"> Updating<br>
-  </a><a href="tasks-68.htm">Comparing resources</a> <a href="tasks-115.htm"><br>
-  </a><a href="tasks-68dg.htm">Merging changes in the comparison editor</a><a href="tasks-113b.htm"><br>
-  Resolving conflicts and merging changes</a><a href="tasks-100b.htm"><br>
-  Merging from a branch</a><a href="tasks-114.htm"><br>
-  Committing resources to the branch</a><a href="tasks-100d.htm"><br>
-  Ignoring resources</a> </p>
-
-
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br>
-</a><a href="../reference/ref-51a.htm">
-Streams in CVS</a>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-114.htm">Committing</a><br>
+<a href="tasks-113.htm">Updating</a><br>
+<a href="tasks-113b.htm">Resolving conflicts</a><br>
+<a href="tasks-68.htm">Comparing resources</a><br>
+<a href="tasks-68dg.htm">Merging changes in the Compare editor</a><br>
+<a href="tasks-100b.htm">Merging from a branch</a><br>
+<a href="tasks-100d.htm">Version control life cycle: adding and ignoring resources</a><br>
+<a href="tasks-103.htm">Replacing resources with a repository version</a><br>
+<a href="tasks-100a.htm">Branching</a><br>
 </p>
 
 <p>&nbsp;<br>
