--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-114.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-114.htm
@@ -4,32 +4,26 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Committing resources to the branch</title>
+<title>Committing</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Committing resources to the branch </H1>
-<P CLASS="Intro"> <b>Tip</b>: Before performing your first&nbsp;synchronize operation, 
-  consider which files and directories you wish to ignore at commits an time, 
-  and add those to the appropriate &quot;ignore&quot; facility.&nbsp;Once a resource 
-  is under version control, it cannot easily be ignored in subsequent commit operations. 
-  Resources come under version control in the first place when a synchronize operation 
-  is performed on a resource or any of its parent folders. See &quot;<a href="tasks-100d.htm">Filtering 
-  resources from a commit</a>.&quot; 
-<P CLASS="Intro"> You can commit workbench resources to the branch so that other 
-  team members can update with themyour work.&nbsp; To commit changes to a branch: 
+Committing</H1>
+<P CLASS="Intro"> You can commit workbench resources to the repository so that 
+  other team members can see your work. Only those changes committed on that branch 
+  will be visible to others working on that branch.&nbsp; To commit changes: 
 <ol>
   <li> 
     <p CLASS="Intro">In the Navigator view, select the resources that you want 
-      to commit to the branch.
+      to commit.
   </li>
   <li> 
     <p CLASS="Intro">Right-click to open the pop-up menu and select <b> Team &gt; 
-      Synchronize with Stream.</b>
+      Synchronize with Repository.</b> The Repository View will open. 
   </li>
   <li> 
-    <p CLASS="Intro">Switch to the Team perspective. On the toolbar of the Synchronize 
+    <p CLASS="Intro">On the toolbar of the Synchronize 
       view, select the <b> outgoing mode</b> button to show any modified workbench 
       resources (outgoing changes) that you may have.
   </li>
@@ -42,36 +36,29 @@ Committing resources to the branch </H1>
       to commit.&nbsp;
   </li>
   <li> 
-    <p CLASS="Intro">When there are no conflicts, you can commit all resources 
-      to the branch. In the Structure Compare pane, right-click the top of the 
-      hierarchy that you want to commit, and select <b>Release</b> from the pop-up 
-      menu.
+    <p CLASS="Intro"> In the Structure Compare pane, right-click the top of the 
+      hierarchy that you want to commit, and select <b>Commit</b> from the pop-up 
+      menu. 
   </li>
   <li> 
-    <p CLASS="Intro"> In the Commit Comment Needed dialog box, provide a comment 
-      for this commit (for example, <samp>Fixed the spelling mistakes</samp>).
+    <p CLASS="Intro"> In the <i>Commit Comment Needed</i> dialog box, provide 
+      a comment for your changes (for example, <samp>Fixed the spelling mistakes</samp>). 
   </li>
 </ol>
 
 
     <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27c.htm"><br>
-  </a><a href="../concepts/concepts-27b.htm"> Branches</a><a href="../reference/ref-51a.htm"><br>
-</a><a href="../concepts/concepts-30.htm">
-Team synchronization</a>&nbsp;</p>
+<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
+<a href="../concepts/concepts-27c.htm">Repositories</a><br>
+<a href="../concepts/concepts-27b.htm">Branches</a><br>
+<a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
+</p>
 
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-  </a><a href="tasks-117.htm"> Associating a project with a branch</a><a href="tasks-115.htm"><br>
-  Synchronizing with a branch</a><a href="tasks-113.htm"><br>
-  Updating</a><a href="tasks-113b.htm"></a><br>
-  <a href="tasks-100d.htm"> Ignoring resources</a><br>
-  <a href="tasks-100d2.htm"> Ignoring resources in CVS</a><br>
-  <a href="tasks-100d1.htm">Creating a global pattern to filter resources from committing</a> &nbsp;<a href="tasks-100d2.htm"><br>
-  Adding a CVS ignore file to filter resources from a commit</a> &nbsp;<a href="tasks-100d3.htm"><br>
-Stopping resources from
-                committing at synchronization time</a> &nbsp;<a href="tasks-100d1b.htm"><br>
-Overriding patterns that prevent resources from committing</a></p>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-113.htm">Updating</a><br>
+<a href="tasks-113b.htm">Resolving conflicts</a><br>
+<a href="tasks-100d.htm">Version control life cycle: adding and ignoring resources</a>
+</p>
 
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
