--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d.htm
@@ -4,11 +4,11 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Version Control Life Cycle: Adding and Ignoring Resources</title>
+<title>Version control life cycle: adding and ignoring resources</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">Version Control Life Cycle: Adding and Ignoring Resources</H1>
+<H1 CLASS="Head">Version control life cycle: adding and ignoring resources</H1>
 <p CLASS="Para" Label="Type">When committing resources, often there are resources 
   that you do not want to store in the repository. For example, external editors 
   might create temporary files in your project, compilation of .java files might 
@@ -66,20 +66,15 @@
 
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a><br>
-<a href="../concepts/concepts-27c.htm">Repositories</a><br>
-<a href="../concepts/concepts-27b.htm">Branches</a><br>
-<a href="../concepts/concepts-30.htm">Team synchronization</a>
+<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
 </p>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-115.htm">Synchronizing with a stream</a><br>
-<a href="tasks-114.htm">Releasing resources to the stream</a><br>
-<a href="tasks-100d1.htm">Creating a global pattern to filter resources from releasing</a><br>
+<a href="tasks-100d1.htm">Creating a global ignore pattern</a><br>
 <a href="tasks-100d2.htm">Authoring the CVS .ignore File</a><br>
-<a href="tasks-100d3.htm">Stopping resources from releasing at synchronization time</a><br>
-<a href="tasks-100d1b.htm">Overriding patterns that prevent resources from releasing</a>
+<a href="tasks-114.htm">Committing</a><br>
+  <a href="tasks-113.htm">Updating</a><br>
 </p>
 
 <p>&nbsp;<br>
