--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d1.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d1.htm
@@ -51,17 +51,12 @@ Creating a global ignore pattern</H1>
 
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
-<a href="../concepts/concepts-27b.htm">Branches</a><br>
-<a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
-</p>
+  <a href="../concepts/concepts-26.htm">Team programming with CVS</a></p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-100d.htm">Version control life cycle: adding and ignoring resources</a><br>
-<a href="tasks-115.htm">Synchronizing with the repository</a><br>
-<a href="tasks-114.htm">Committing</a><br>
-<a href="tasks-113.htm">Updating</a><br>
-<a href="tasks-113b.htm">Resolving conflicts</a><br>
+<a href="tasks-100d1b.htm">Overriding or removing resource ignore patterns</a><br>
+  <a href="tasks-115.htm">Synchronizing with the repository</a><br>
 </p>
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
