--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d2.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d2.htm
@@ -4,11 +4,11 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Authoring the CVS .ignore File</title>
+<title>Authoring the CVS .ignore file</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">Authoring the CVS .ignore File</H1>
+<H1 CLASS="Head">Authoring the CVS .ignore file</H1>
 <P CLASS="Para" Label=Type>When committing resources, often there are resources 
   that you do not want to at the version control. You can use the CVS &quot;ignore&quot; 
   facility, which reads the contents of the file <i>.cvsignore</i> to determine 
