--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d1b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d1b.htm
@@ -4,12 +4,12 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Overriding or removing file ignore patterns</title>
+<title>Overriding or removing resource ignore patterns</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Overriding or removing file ignore patterns</H1>
+Overriding or removing resource ignore patterns</H1>
 
 
 <p CLASS="Para" Label="Type">After you have added global file-matching patterns
@@ -34,21 +34,13 @@ click <b>Remove</b>. </p>
 
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-27b.htm">
-Branches</a><a href="../reference/ref-51a.htm"><br>
-</a><a href="../concepts/concepts-30.htm">
-Team synchronization</a>&nbsp;</p>
+<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
+</p>
 
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-114.htm"><br>
-Committing resources to a branch</a><a href="tasks-100d.htm"><br>
-Filtering resources from a commit</a><a href="tasks-100d1.htm"><br>
-Creating a global pattern to
-                filter resources from version management</a> &nbsp;<a href="tasks-100d2.htm"><br>
-Adding a CVS ignore file to
-                filter resources from version management</a> &nbsp;<a href="tasks-100d3.htm"><br>
-Stopping resources from
-                being committed at synchronization time</a> &nbsp;
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-100d.htm">Version control life cycle: adding and ignoring resources</a><br>
+<a href="tasks-100d1.htm">Creating a global ignore pattern</a><br>
+<a href="tasks-115.htm">Synchronizing with the repository</a><br>
 </p>
 
 <p>&nbsp;<br>
