--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d.htm
@@ -72,7 +72,7 @@
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-100d1.htm">Creating a global ignore pattern</a><br>
-<a href="tasks-100d2.htm">Authoring the CVS .ignore File</a><br>
+<a href="tasks-100d2.htm">Authoring the CVS .ignore file</a><br>
 <a href="tasks-114.htm">Committing</a><br>
   <a href="tasks-113.htm">Updating</a><br>
 </p>
