lower case branch

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100b.htm
@@ -4,12 +4,12 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Merging from a Branch</title>
+<title>Merging from a branch</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head"> Merging from a Branch</H1>
-<P CLASS="Para">After creating and working in a Branch for some time, you may 
+<H1 CLASS="Head"> Merging from a branch</H1>
+<P CLASS="Para">After creating and working in a CVS branch for some time, you may 
   want to merge your changes from the branch into another branch, or into HEAD. 
   To do this, you will need to know:</P>
 <ol>
